# glimpsh

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: PROTOCOL.md
examples/: config.yaml
glimpsh/: __init__.py  __main__.py  app.py  config.py
glimpsh/gaze/: __init__.py  client.py  protocol.py
glimpsh/terminal/: __init__.py  focus.py
glimpsh/testing/: __init__.py  mock_gaze_server.py
glimpsh/tui/: __init__.py  app.py  cursor.py  debug.py  grid_adapter.py  messages.py  status.py  terminal.py
tests/: __init__.py
tests/fixtures/: __init__.py
